vapi-webhooksite-auth/deployment.yaml
apiVersion: v1alpha1
group: management
kind: Deployment
name: webhooksite-auth
metadata:
  scope:
    kind: Environment
    name: gmdemo
tags:
  - v1
spec:
  virtualAPIRelease: webhooksite-auth-1.0.0
  virtualHost: gmdemo-webhooksite-auth
