vapi-webhooksite-auth/vapi-virtualservice.yaml
group: management
apiVersion: v1alpha1
kind: VirtualService
name: webhooksite-auth
metadata:
  scope:
    kind: VirtualAPI
    name: webhooksite-auth
spec:
  prefix: /hook
  auth:
    kind: APIKeyAuthRule
    name: webhooksite-auth
  route:
    - service:
        prefix: /98f9bed6-198e-4ae6-a704-dc15d39adc1d
        protocol: https
        codec: AUTO
        credentials:
          - kind: APIKeyCredential
            secretName: webhooksite-auth-cred 
            in:
              name: api-key
              location: header
        endpoints:
          - host: webhook.site
            port: 443
      operations:
        - id: getDemo
          path: /demo
          method: GET
